updated about me section

--- a/index.html
+++ b/index.html
@@ -78,13 +78,35 @@
             <div class="whiteBackground">
                 <div class="text">
                     <p>
-                        I'm currently studying in my second year at Sheffield Hallam University on the BEng Software
-                        Engineering course.
-                        Software Development is my passion and is the reason why after 3 years in the recruitment
-                        industry, I decided to
-                        leave my career behind and move 60 miles away to put myself in the best position to learn my
-                        trade. I am a driven and reliable professional person with a passion to
-                        achieve my set targets and personal goals.
+                        I am a BCS (Professional Member) registered and RITTech certified Full-Stack Software Developer with 2+ years of full-time experience and a real passion for creating robust applications through the medium of clean and reusable code.
+                    </p>
+
+                    <p>
+                        I have worked on web, mobile, desktop and API development to name a few, but I have a real passion for modern web and mobile development specifically and have ambitions to work with technologies such as React/React Native, Vue, Flutter etc. From a backend perspective I generally prefer working with APIs and am particularly keen to transition to .NET 5/6. Commercially however, my main experience is with C# .NET Framework MVC web applications.
+                    </p>
+
+                    <p>
+                        I have worked on web, mobile, desktop and API development to name a few, but I have a real passion for modern web and mobile development specifically and have ambitions to work with technologies such as React/React Native, Vue, Flutter etc. From a backend perspective I generally prefer working with APIs and am particularly keen to transition to .NET 5/6. Commercially however, my main experience is with C# .NET Framework MVC web applications.
+                    </p>
+
+                    <p>
+                        I have a passion for user experience, doing things properly and pride myself on a high standard of work. I’ve had numerous comments in the past about the quality of my work with bugs being rare due to my meticulous nature and testing policy.
+                    </p>
+
+                    <p>
+                        Agile work practices are at the core of how I like to work and I’ve used a few tools, such as Confluence/Jira, Azure DevOps etc. to plan and manage workflows for our team in the past.
+                    </p>
+
+                    <p>
+                    <h3>What Interests Me</h3>
+                        <ul class="centeredBullets">
+                            <li>Working with modern technologies</li>
+                            <li>Working in a positive team with a passion for software</li>
+                            <li>Strong work/life balance - Remote and flexible working</li>
+                            <li>Working on exciting, greenfield projects that allow me to express my creativity</li>
+                            <li>Opportunity for personal development and always learning</li>
+                            <li>I enjoy collaboration and working effectively as part of a team</li>
+                        </ul>
                     </p>
                 </div>
             </div>
