--- a/Recommendations.html
+++ b/Recommendations.html
@@ -99,7 +99,7 @@
                             rehire once his course has finished
                         </blockquote>
                         <div class="cite">
-                            <cite>Michael Collum - IT Manager - TSS Infrastructure</cite>
+                            <cite>Michael Collum - IT Manager - TSS Infrastructure - 2018</cite>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             and T-SQL.
                         </blockquote>
                         <div class="cite">
-                            <cite>Stephen Helvin - Software Developer - TSS Infrastructure</cite>
+                            <cite>Stephen Helvin - Software Developer - TSS Infrastructure - 2018</cite>
                         </div>
                     </div>
                 </div>
