--- a/CV.html
+++ b/CV.html
@@ -78,8 +78,9 @@
             <div class="whiteBackground">
                 <div class="text">
                     <div class="cvdown">
-                        <p><a href="download/CV.pdf"><u><strong>Click here for a downloadable PDF version of my
-                                        CV</strong></u></a></p>
+                        <p><a href="download/CV.pdf"><u><strong>Click here for a downloadable PDF version of my CV</strong></u></a></p>
+
+                        <iframe src="download/CV.pdf" style="display: flex;" width="100%" height="800px"></iframe>
                     </div>
                 </div>
             </div>
