--- a/Qualifications.html
+++ b/Qualifications.html
@@ -79,24 +79,30 @@
             <div class="whiteBackground">
                 <div class="text">
                     <div class="qualTitle">
-                        <h4>BEng Software Engineering</h4>
+                        <h4>BEng Software Engineering - 1<sup>st</sup> Class Honours</h4>
                         <h4>Sheffield Hallam University</h4>
-                        <h4 class="smallHeading">2017 – Present </h4>
+                        <h4 class="smallHeading">2017 – 2021 </h4>
                         <div class="qualDesc">
+                            <h4 class="smallHeading">1<sup>st</sup> year - 78% overall</h4>
+                            <h4 class="smallHeading">2<sup>nd</sup> year - 74% overall</h4>
+                            <h4 class="smallHeading">3<sup>rd</sup> year - 80% overall</h4>
 
                             <p>
-                                I am currently on work placement year from Sheffield Hallam University where I am enrolled on a 
-                                Software Engineering Degree of which I have completed 2 years already. I started university with 
-                                absolutely no coding experience whatsoever but through sheer hard work and determination managed to
-                                achieve a high first (77.83% overall) in my first year, and a first (73.33% overall) again in my second 
-                                year. I consider this to be one of my proudest achievements.
+                                The course covered all aspects of software engineering including, but not limited to: Web and Mobile development, Project Management, Database Systems, Software Testing, Project Planning and System Design. I have several projects to evidence my competence in these fields. 
+                                I initially started university with 
+                                no software development experience whatsoever but through sheer hard work and determination managed to
+                                achieve a high first across all my years of study which i consider to be on of my greatest achievements.
 
-                                <br><br>
+                                <br /><br />
 
-                                I am also a course rep meaning I have regular catch up meetings with my course leader to feedback my 
-                                opinions on the course and discuss potential improvements. In line with my responsibilities, I speak 
+                                I was also a course rep meaning I had regular catch up meetings with my course leader to feedback my 
+                                opinions on the course and discuss potential improvements. In line with my responsibilities, I spoke 
                                 to the other students on the course and put together a comprehensive list of topics that they
-                                would like me to raise at the meeting.
+                                would like me to raise at the regular meeting.
+
+                                <br /><br />
+
+                                Whilst at Sheffield Hallam I also started the Programming Society which I was President of for one year. This involved planning fun interactive learning sessions for students on any course wanting to learn more about programming. I particularly enjoyed the teaching aspect of this and being able to pass on my knowledge to others whilst also learning new things myself.
                             </p>
                         </div>
 
