cu - work experience

--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -89,40 +89,55 @@
 
                         <div class="jobDesc">
                             <p>
-                                When I found out that I had a 4-month break between 1st and 2nd year of University, I
-                                decided that rather than sit around, I wanted to do something valuable with my time and look for a 
-                                short-term internship. I found
-                                that all the Software Development internships being advertised were for 2nd years+ only.
-                                So, I decided
-                                to source my own opportunity by getting in touch with local companies and ended up being
-                                offered a position
-                                at TSS Infrastructure Services.
-                                <br />
-                                <br />
-                                My role here was to use an existing Work Management Platform called F0CUS, that was built
-                                in WPF as a base to recreate the
-                                system as a web version using C# MVC ASP.NET with HTML/CSS/SASS, Bootstrap, T-SQL, JavaScript
-                                and jQuery amongst other frameworks and plugins. Having no experience with MVC, Bootstrap, JavaScript 
-                                and jQuery, this role was a great
-                                learning curve for me and a
-                                fantastic opportunity to learn some new skills.
-                                <br />
-                                <br />
-                                I learnt a lot from the team in the time I
-                                was there and managed to
-                                begin working virtually autonomously after only 3 weeks which was considered a huge
-                                success
-                                considering my
-                                inexperience. In my time at TSS I exceeded all expectations and built 3 main modules within F0CUS 
-                                which handled the payment process for subcontractors amongst other
-                                things.
-                                <br />
-                                <br />
-                                After a couple of months back at University, TSS contacted me and asked me to continue working for 
-                                them remotely on a casual basis in order to carry on working on F0CUS. I worked for them throughout 
-                                my second year before starting a year long work placement with them in July 2019 as a part of my 
-                                4 year sandwich degree.
+                                I initially joined TSS on a short-term contract whilst at university and have been employed there on numerous contracts and a permanent basis since. 06/18 – 08/20 (Software Developer - Contract) 07/21 – 12/21 (Lead Developer - Permanent).
                             </p>
+
+                        <p><a href="https://tssinfrastructure.com/focus/"><u><strong>See here a quick video demo of our core application that I had a big impact on</strong></u></a></p>
+                        
+                        <br />
+
+
+                            <p>
+                                <h3>Tech Stack (Full Stack)</h3>
+                                    <ul class="centeredBullets">
+                                        <li>C# MVC .Net Framework</li>
+                                        <li>HTML/CSS/SASS/jQuery/Bootstrap</li>
+                                        <li>SQL Server</li>
+                                        <li>Azure</li>
+                                        <li>C# Web API</li>
+                                    </ul>
+                            </p>
+
+                            <br />
+
+                            <p>
+                                <h3>Responsibilities</h3>
+                                <ul class="centeredBullets">
+                                    <li>Leading code reviews and other team meetings such as daily stand ups</li>
+                                    <li>Mentoring and supporting junior colleagues</li>
+                                    <li>Making key decisions and distributing work to other developers</li>
+                                    <li>SME for web development and source control</li>
+                                    <li>Drove best practice standards across the business by creating coding standards and ISO27001 compliant processes for secure development</li>
+                                    <li>Research into migration from .Net Framework to .Net 5 and decoupling main MVC application in favour of a C# Web API</li>
+                                    <li>Managing user requests and issues</li>
+                                    <li>Creation, deployment, monitoring and maintaining of Azure App Services and Windows services hosted on Azure VMs</li>
+                                    <li>Use of Azure services such as Key Vault to securely use sensitive information in the codebase</li>
+                                </ul>
+                            </p>
+
+                            <br />
+
+                            <p>
+                                <h3>Key Achievements</h3>
+                                <ul class="centeredBullets">
+                                    <li>Working my way from a Junior Developer with no experience to Lead Developer and SME in the business for web development and source control within 3 years.</li>
+                                    <li>Standardised many internal processes and improved consistency across our applications. This included things like error handling, generic functions, Windows service to pass off parameters to and function as a generic email service, portal for monitoring the heartbeat, error and activity logging of all our 30+ windows services.</li>
+                                    <li>Migration of all codebases from TFS to git, from research to implementation.</li>
+                                    <li>Created a completely dynamic front-end for SSRS integrated with our main system. This allowed users to directly run reports in the browser from our web app using complex dynamic parameters in multiple output formats. Users were then able to subscribe to those reports with the selected parameters and receive it in an email on a schedule (using the aforementioned email service).</li>
+                                    <li>I designed many new processes that underpinned the way our development team worked. Example being our UAT process from user request and documentation/sign off, through to implementation, testing and release. I put a specific focus on iterative development practices alongside collaborating with real users of the system to achieve a quality, user signed-off product.</li>
+                                </ul>
+                            </p>
+                            
                         </div>
                     </div>
                 </div>
@@ -138,17 +153,7 @@
 
                         <div class="jobDesc">
                             <p>
-                                I was brought into RZ to work within their IT recruitment function. They had previously
-                                done some recruitment for their
-                                clients in the IT market and brought me on board to expand their presence in the
-                                national market. My role was to
-                                come up with and execute an effective business development strategy using contacts I
-                                already had in the industry as
-                                well as networking with potential new clients. Once I started the process of working
-                                with a client, I would liaise
-                                with them on any current open vacancies in order to understand their needs and then use
-                                my candidate attraction
-                                skills to fill those vacancies.
+                                I was brought into RZ to work within their IT recruitment function. They had previously done some recruitment for their clients in the IT market and brought me on board to expand their presence in the national market. My role was to come up with and execute an effective business development strategy using contacts I already had in the industry as well as networking with potential new clients. Once I started the process of working with a client, I would liaise with them on any current open vacancies in order to understand their needs and then use my candidate attraction skills to fill those vacancies.
                             </p>
                         </div>
                     </div>
@@ -166,15 +171,7 @@
 
                         <div class="jobDesc">
                             <p>
-                                I joined Hays initially as a Resourcer before being promoted to Recruitment Consultant
-                                in February 2016. Having no
-                                prior recruitment experience, this role was a massive learning curve for me. I very
-                                quickly built up a knowledge
-                                and understanding of the IT recruitment industry. In this role I built the business up
-                                using my skills in business
-                                development to develop relationships with key clients. I had 11 contractors working for
-                                me at the time I finished
-                                with Hays.
+                                I joined Hays initially as a Resourcer before quickly being promoted to Recruitment Consultant after 6 months. Having no prior recruitment experience, this role was a massive learning curve for me. I very quickly built up a knowledge and understanding of the IT industry. In this role I used my skills in business development to develop relationships with key clients and candidates. I also developed my multitasking and time management skills to achieve positive results.
                             </p>
                         </div>
                     </div>
